# rmf_internal_msgs

./: README.md  codecov.yml
.github/workflows/: build.yaml
rmf_alert_msgs/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_charger_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_charger_msgs/msg/: ChargerState.msg
rmf_chope_msgs/: CMakeLists.txt  package.xml
rmf_chope_msgs/msg/: ClaimRequest.msg  DelayRequest.msg  FlexibleTimeRequest.msg  FlexibleTimeReservationAlt.msg  ReleaseRequest.msg  ReservationAllocation.msg  Ticket.msg
rmf_dispenser_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
rmf_door_msgs/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  package.xml
rmf_fleet_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
rmf_ingestor_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
rmf_lift_msgs/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  package.xml
rmf_obstacle_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_reservation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_reservation_msgs/msg/: ClaimRequest.msg  FixedTimeReservationAlt.msg  FlexibleTimeRequest.msg  FlexibleTimeReservationAlt.msg  FreeParkingSpots.msg  ReleaseRequest.msg  RequestHeader.msg  ReservationAllocation.msg  StartTimeRange.msg  Ticket.msg
rmf_scheduler_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
rmf_site_map_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_task_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  package.xml
rmf_task_msgs/action/: DynamicEvent.action
rmf_task_msgs/msg/: Alert.msg  AlertParameter.msg  AlertResponse.msg  ApiRequest.msg  ApiResponse.msg  Assignment.msg  BidNotice.msg  BidProposal.msg  BidResponse.msg  Clean.msg  Delivery.msg  DispatchAck.msg  DispatchCommand.msg  DispatchState.msg  DispatchStates.msg  DynamicEventDescription.msg  DynamicEventStatus.msg  LogEntry.msg  Phase.msg  PhaseTier.msg  TaskSummary.msg
rmf_task_msgs/srv/: ApiService.srv  CancelTask.srv  GetDispatchStates.srv  ReviveTask.srv  SubmitTask.srv
rmf_traffic_msgs/: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  package.xml
rmf_workcell_msgs/: CHANGELOG.md  CHANGELOG.rst  QUALITY_DECLARATION.md  package.xml
(+98 files in other folders)
